# 2016-C

Task1/: Task1.c
task1/: main.c
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
